--- a/frontend/src/app/ui-kit/data-search-button/data-search-button.component.html
+++ b/frontend/src/app/ui-kit/data-search-button/data-search-button.component.html
@@ -3,7 +3,7 @@
 
   <i class="fas fa-search"></i>
 
-  <span *ngIf="!editMode" (click)="editMode = true">
+  <span *ngIf="!editMode" (click)="editModeHandler()">
     {{ label }}
   </span>
 
@@ -11,6 +11,7 @@
     <input type="text"
            placeholder="Search scenario"
            (keyup)="keyupHandler(el.value)"
+           autofocus="true"
            #el>
     <i class="fas fa-times" (click)="closeClickHandler()"></i>
   </span>
