--- a/frontend/src/app/ui-kit/data-action-button/data-action-button.component.html
+++ b/frontend/src/app/ui-kit/data-action-button/data-action-button.component.html
@@ -1,6 +1,6 @@
 <button
   class="data-action"
-  (click)="clicked.emit(label)"
->
-  <i *ngIf="icon" [attr.class]="icon"></i> {{ label }}
+  (click)="clicked.emit(label)">
+  <i *ngIf="icon" [attr.class]="icon"></i>
+  <span [ngClass]="{ 'except-xs': hideLabelOnXS }">{{ label }}</span>
 </button>
