--- a/frontend/src/ui-kit.css
+++ b/frontend/src/ui-kit.css
@@ -95,6 +95,7 @@
   color: var(--color-page-data-actions);
   font-size: 16px;
   font-weight: 500;
+  white-space: nowrap;
   cursor: pointer;
   margin: 0;
   padding: 0;
@@ -125,6 +126,9 @@
 .data-action .search-field input::placeholder {
   color: var(--color-page-data-actions-alt);
   font-weight: 400;
+}
+.data-action span {
+
 }
 
 
