--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -41,7 +41,7 @@ main > *,
 
 
   --navbar-size: 70px;
-  --navbar-size-xs: 50px;
+  --navbar-size-xs: 20px;
   --sidebar-size: 25vw;
 
   --card-height: 20vh;
@@ -123,6 +123,7 @@ main {
   display: flex;
   flex-direction: column;
 }
+
 @media (max-width: 600px) {
   .app-content {
     margin-top: var(--navbar-size-xs);
@@ -186,11 +187,21 @@ main {
 }
 @media (max-width: 600px) {
 
+  .app-content .title-row {
+    margin-top: 0;
+  }
+  .app-content .page-description {
+    margin-top: 16px;
+    margin-bottom: 0;
+    width: 100%;
+  }
+  .app-content .app-filters {
+    margin: 26px 0 14px 0;
+  }
   .app-content .data-placeholder {
     margin-bottom: var(--xs-data-placeholder-margin-bottom);
   }
-
-  .page-actions {
+  .app-content .page-actions {
     position: fixed;
     z-index: 100;
     top: var(--xs-title-actions-top);
@@ -205,6 +216,9 @@ main {
 .sidebar-placeholder {
   margin-left: 22px;
   margin-right: 50px;
+}
+.xs-filters-placeholder {
+  margin-left: -20px;
 }
 
 
