--- a/frontend/src/app/layouts/sidebar-page-layout/sidebar-page-layout.component.css
+++ b/frontend/src/app/layouts/sidebar-page-layout/sidebar-page-layout.component.css
@@ -2,6 +2,7 @@
   padding-left: 50px;
   padding-right: 100px;
   min-height: 100%;
+  background: var(--color-page-background);
 }
 
 @media (max-width: 600px) {
