--- a/frontend/src/ui-kit.css
+++ b/frontend/src/ui-kit.css
@@ -12,6 +12,7 @@
   --color-semiwhite: #ffffff8c;
 
   /* DOMAIN COLORS */
+  --color-page-background: var(--color-white);
   --color-passed: #89CB8C;
   --color-accent: #FFD600;
   --color-upic: #6087AB;
@@ -28,6 +29,12 @@
 
   --shadow-normal: 0 20px 50px 0 rgba(0,0,0,.25);
   --shadow-sm: 0 10px 30px 0 rgba(0,0,0,.15);
+
+  --font-normal: 'Work Sans', sans-serif;
+  --font-header: 'Oswald', sans-serif;
+  --font-analytical: 'Oswald', sans-serif;
+  --font-normal1: 'Jost', sans-serif;
+  --font-normal2: 'Ubuntu', sans-serif;
 }
 
 .color-blue {
@@ -46,6 +53,16 @@
   background: var(--color-red-dark);
 }
 
+/* TYPOGRAPHY */
+
+body {
+  font-family: var(--font-normal);
+}
+button, input {
+  font-family: inherit;
+}
+
+
 /* BUTTONS */
 
 .button {
@@ -54,7 +71,7 @@
   min-height: 40px;
   padding: 0 1.5em 0 1.5em;
   font-size: 100%;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--font-normal);
   font-weight: 400;
   color: #ffffff;
   cursor: pointer;
@@ -142,7 +159,7 @@
 .column-header h2 {
   font-weight: 500;
   font-size: 24px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--font-header);
 }
 .column-header span .action {
   text-decoration: none;
@@ -159,13 +176,13 @@
 }
 
 .page-header {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--font-header);
   font-size: 36px;
   font-weight: 500;
   color: var(--color-page-headers);
 }
 .page-description {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--font-normal);
   font-size: 16px;
   font-weight: 500;
   color: #000000;
@@ -183,6 +200,7 @@
   line-height: 60%;
   margin: 70px 0 27px 0;
   padding: 0;
+  font-family: var(--font-header);
 }
 .sidebar-header > h2 small {
   font-size: 36px;
@@ -199,12 +217,13 @@
 .filter-header {
   font-size: 24px;
   font-weight: 500;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--font-header);
+  color: var(--color-page-headers);
 }
 .filter-subheader {
   font-size: 14px;
   font-weight: 500;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--font-header);
   color: #3A3A3A;
   margin-top: 24px;
   margin-bottom: 0;
@@ -217,7 +236,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 24px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--font-normal);
 }
 .text-field--150 {
   width: 150px;
@@ -272,7 +291,7 @@
   border: none;
   background: transparent;
   color: #535353;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--font-normal);
   font-size: 16px;
   padding-left: 11px;
   padding-right: 11px;
@@ -302,7 +321,7 @@
   border-radius: 20px;
   padding-left: 16px;
   padding-right: 12px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--font-normal);
   font-size: 14px;
   font-weight: 400;
   margin: 2px;
@@ -322,7 +341,7 @@
   border-radius: 2px;
   padding-left: 20px;
   padding-right: 20px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--font-normal);
   font-size: 14px;
   font-weight: 400;
   margin: 2px;
@@ -356,7 +375,7 @@
   align-items: center;
 }
 .checkbox-field span {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--font-normal);
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -404,7 +423,7 @@
 /* CHECKBOXES */
 /* ???
 .checkbox, .switch, .toggle {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--font-normal);
   font-size: 16px;
   font-weight: 500;
   margin-bottom: 16px;
@@ -472,6 +491,7 @@
   font-weight: 500;
   margin-top: 2px;
   cursor: pointer;
+  font-family: var(--font-header);
 }
 .card-sm .info-panel .info .label {
   font-size: 14px;
@@ -635,6 +655,7 @@
   font-size: 16px;
   color: #1F1F1F;
   cursor: pointer;
+  font-family: var(--font-header);
 }
 .card-md .header .left i {
   margin-left: .5em;
@@ -725,6 +746,7 @@
   font-weight: 500;
   margin-bottom: 4px;
   cursor: pointer;
+  font-family: var(--font-header);
 }
 .card-lg .info-panel .left .description {
   color: #1F1F1F;
@@ -928,11 +950,13 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
+  font-family: var(--font-header);
 }
 .widget .widget-value--lg {
   font-size: 36px;
   font-weight: 400;
   line-height: 100%;
+  font-family: var(--font-normal);
 }
 .widget .widget-value--accent {
   padding-top: 30px;
@@ -942,6 +966,7 @@
 .widget .widget-value--accent em {
   font-size: 64px;
   font-style: normal;
+  font-family: var(--font-analytical);
 }
 .widget-value.widget-value--fragile {
   align-items: flex-start;
@@ -955,6 +980,7 @@
 }
 
 .fragile-value {
+  font-family: var(--font-header);
   font-size: 16px;
   text-align: left;
   line-height: 120%;
@@ -966,6 +992,7 @@
 .fragile-value--accent em {
   font-style: normal;
   font-size: 48px;
+  font-family: var(--font-analytical);
 }
 .fragile-preview {
   position: absolute;
@@ -990,6 +1017,7 @@
 }
 
 .stats-value {
+  font-family: var(--font-analytical);
   font-size: 36px;
   margin-top: 9px;
   margin-bottom: 7px;
@@ -1102,6 +1130,7 @@
 }
 .sidebar-placeholder .viewports-selector .viewport-toggle--on {
   background: var(--color-blue);
+  color: var(--color-white);
 }
 
 
@@ -1112,6 +1141,7 @@
   margin-bottom: 8px;
   font-size: 24px;
   margin-top: 0;
+  font-family: var(--font-header);
 }
 .widget-label .state {
   color: #ffffff;
