UI Kit: basic jobs view

--- a/frontend/src/app/ui-kit/data-search-button/data-search-button.component.html
+++ b/frontend/src/app/ui-kit/data-search-button/data-search-button.component.html
@@ -9,7 +9,7 @@
 
   <span *ngIf="editMode" class="search-field">
     <input type="text"
-           placeholder="Search scenario"
+           [attr.placeholder]="placeholder"
            (keyup)="keyupHandler(el.value)"
            autofocus="true"
            #el>
