UI Kit: bind scenarios

--- a/frontend/src/app/view/overview/overview.component.html
+++ b/frontend/src/app/view/overview/overview.component.html
@@ -57,7 +57,7 @@
         [title]="'Already'"
         [isAccentValue]="true"
         [bgColor]="'white'">
-        <span><em>32</em>days without fails</span>
+        <span><em>32</em>days<br> without fails</span>
       </app-widget>
 
       <app-widget
