UI Kit: refactoring & add list view button

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
   </div>
   <div class="app-account except-xs">Maddy Savage <i class="icon material-icons">copyright</i></div>
   <div class="app-hamburger" [ngClass]="{ 'app-hamburger--opened': isMenuOpened }">
-    <span (click)="openMenuHandler()"><i class="material-icons">dehaze</i></span>
+    <span (click)="openMenuHandler()"><i class="fas fa-bars"></i></span>
     <ul>
       <li routerLinkActive="navbar-item--active" [routerLink]="['/overview']">Overview</li>
       <li routerLinkActive="navbar-item--active" [routerLink]="['/scenarios']">Scenarios</li>
