--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav>
   <div class="app-menu">
-    <span class="logo">
+    <a href="/" class="logo">
       <img src="/assets/images/logo.svg" alt="">
-    </span>
+    </a>
     <ul>
       <li routerLinkActive="navbar-item--active" [routerLink]="['/overview']">Overview</li>
       <li routerLinkActive="navbar-item--active" [routerLink]="['/scenarios']">Scenarios</li>
@@ -12,7 +12,7 @@
   </div>
   <div class="app-account except-xs">Maddy Savage <i class="icon material-icons">copyright</i></div>
   <div class="app-hamburger" [ngClass]="{ 'app-hamburger--opened': isMenuOpened }">
-    <span (click)="openMenuHandler()"><i class="fas fa-bars"></i></span>
+    <app-icon icon="Hamburger" (click)="openMenuHandler()"></app-icon>
     <ul>
       <li routerLinkActive="navbar-item--active" [routerLink]="['/overview']">Overview</li>
       <li routerLinkActive="navbar-item--active" [routerLink]="['/scenarios']">Scenarios</li>
