--- a/frontend/src/app/view/jobs/jobs.component.html
+++ b/frontend/src/app/view/jobs/jobs.component.html
@@ -21,14 +21,14 @@
 
       <app-data-action-button
         [label]="'Refresh'"
-        [icon]="'fas fa-redo'"
+        [icon]="'Refresh'"
         [hideLabelOnXS]="true"
         (clicked)="testHandler($event)">
       </app-data-action-button>
 
       <app-data-action-button
         [label]="'Group by Scenarios'"
-        [icon]="'fas fa-object-ungroup'"
+        [icon]="'Group by Scenarios'"
         [hideLabelOnXS]="true"
         (clicked)="testHandler($event)">
       </app-data-action-button>
@@ -92,7 +92,7 @@
 
     <app-data-action-button
       [label]="'Add Filters'"
-      [icon]="'fas fa-filter'"
+      [icon]="'Add Filters'"
       (clicked)="testHandler($event)">
     </app-data-action-button>
 
