--- a/frontend/src/app/view/overview/overview.component.html
+++ b/frontend/src/app/view/overview/overview.component.html
@@ -21,7 +21,7 @@
         [bgColor]="'blue'">
 
         Nothing broken<br>
-        <i class="far fa-thumbs-up"></i>
+        <app-icon icon="Nothing broken"></app-icon>
 
       </app-widget>
 
@@ -144,7 +144,7 @@
 
           <div class="status-cell">
             <div class="status-icon status-icon--passed">
-              <i class="fas fa-check-circle"></i>
+              <app-icon icon="Passed"></app-icon>
             </div>
             <div class="labels">
               <div class="time-label">3 min ago</div>
@@ -168,7 +168,7 @@
         <td>
 
           <div class="action-cell action-cell--right">
-            <i class="action-cell-icon fas fa-times"></i>
+            <app-icon icon="Close" customClass="action-cell-icon"></app-icon>
           </div>
 
         </td>
@@ -178,7 +178,7 @@
 
           <div class="status-cell">
             <div class="status-icon status-icon--passed">
-              <i class="fas fa-check-circle"></i>
+              <app-icon icon="Passed"></app-icon>
             </div>
             <div class="labels">
               <div class="time-label">3 min ago</div>
@@ -202,7 +202,7 @@
         <td>
 
           <div class="action-cell action-cell--right">
-            <i class="action-cell-icon fas fa-times"></i>
+            <app-icon icon="Close" customClass="action-cell-icon"></app-icon>
           </div>
 
         </td>
@@ -212,7 +212,7 @@
 
           <div class="status-cell">
             <div class="status-icon status-icon--passed">
-              <i class="fas fa-check-circle"></i>
+              <app-icon icon="Passed"></app-icon>
             </div>
             <div class="labels">
               <div class="time-label">3 min ago</div>
@@ -236,7 +236,7 @@
         <td>
 
           <div class="action-cell action-cell--right">
-            <i class="action-cell-icon fas fa-times"></i>
+            <app-icon icon="Close" customClass="action-cell-icon"></app-icon>
           </div>
 
         </td>
@@ -246,7 +246,7 @@
 
           <div class="status-cell">
             <div class="status-icon status-icon--passed">
-              <i class="fas fa-check-circle"></i>
+              <app-icon icon="Passed"></app-icon>
             </div>
             <div class="labels">
               <div class="time-label">3 min ago</div>
@@ -270,7 +270,7 @@
         <td>
 
           <div class="action-cell action-cell--right">
-            <i class="action-cell-icon fas fa-times"></i>
+            <app-icon icon="Close" customClass="action-cell-icon"></app-icon>
           </div>
 
         </td>
@@ -280,7 +280,7 @@
 
           <div class="status-cell">
             <div class="status-icon status-icon--passed">
-              <i class="fas fa-check-circle"></i>
+              <app-icon icon="Passed"></app-icon>
             </div>
             <div class="labels">
               <div class="time-label">3 min ago</div>
@@ -304,7 +304,7 @@
         <td>
 
           <div class="action-cell action-cell--right">
-            <i class="action-cell-icon fas fa-times"></i>
+            <app-icon icon="Close" customClass="action-cell-icon"></app-icon>
           </div>
 
         </td>
