--- a/frontend/src/app/view/scenarios/scenarios.component.html
+++ b/frontend/src/app/view/scenarios/scenarios.component.html
@@ -27,7 +27,7 @@
 
       <app-data-action-button
         [label]="'Refresh'"
-        [icon]="'fas fa-redo'"
+        [icon]="'Refresh'"
         [hideLabelOnXS]="true"
         (clicked)="refresh()">
       </app-data-action-button>
@@ -35,14 +35,14 @@
       <app-data-action-button
         class="except-xs"
         [label]="'List View'"
-        [icon]="'fas fa-th-list'"
+        [icon]="'List View'"
         [hideLabelOnXS]="true"
         (clicked)="listView()">
       </app-data-action-button>
 
       <app-data-action-button
         [label]="'Show Differences'"
-        [icon]="'far fa-images'"
+        [icon]="'Show Differences'"
         [hideLabelOnXS]="true"
         (clicked)="showDifference()">
       </app-data-action-button>
@@ -118,7 +118,7 @@
 
     <app-data-action-button
       [label]="'Add Filters'"
-      [icon]="'fas fa-filter'"
+      [icon]="'Add Filters'"
       (clicked)="showMobileFilters($event)">
     </app-data-action-button>
 
