--- a/frontend/src/app/ui-kit/text-field/text-field.component.html
+++ b/frontend/src/app/ui-kit/text-field/text-field.component.html
@@ -1,22 +1,31 @@
 <div class="text-field text-field--350">
-  <label>{{ label }} <i *ngIf="tooltip" [attr.tooltip]="tooltip" class="far fa-question-circle"></i></label>
+  <label>{{ label }}
+    <app-icon *ngIf="tooltip" icon="Help"></app-icon>
+    <!--<i *ngIf="!tooltip" [attr.tooltip]="tooltip" class="far fa-question-circle"></i>-->
+  </label>
   <p *ngIf="description" class="description">{{ description }}</p>
   <div class="input-box">
-<!--
-    <span class="input-box-chips">value1 <i class="fas fa-times"></i></span>
-    <span class="input-box-chips">value2 <i class="fas fa-times"></i></span>
--->
+
+    <!-- Chips
+        <span class="input-box-chips">value1 <app-icon icon="Close"></app-icon></span>
+        <span class="input-box-chips">value2 <app-icon icon="Close"></app-icon></span>
+     -->
 
     <input type="text"
            [attr.placeholder]="placeholder"
            [(ngModel)]="value"
            (ngModelChange)="ngModelChangeHandler($event, val)"
            #val>
-    <i *ngIf="fieldIcon" class="input-box-icon fas fa-external-link-alt"></i>
 
-    <!--
+    <app-icon *ngIf="fieldIcon" icon="External Link" customClass="input-box-icon"></app-icon>
+
+    <!-- Button
     <button class="input-box-button">Reset</button>
-    <i class="input-box-icon fas fa-times"></i>
     -->
+
+    <!-- Clear icon
+    <app-icon icon="Close" customClass="input-box-icon"></app-icon>
+    -->
+
   </div>
 </div>
