--- a/frontend/src/ui-kit.css
+++ b/frontend/src/ui-kit.css
@@ -492,7 +492,10 @@ button, input {
   object-fit: cover;
   width: 100%;
   height: 100%;
+  min-height: 100%;
+  min-width: 100%;
   border-radius: 2px;
+  background: var(--color-card-background);
   filter: grayscale(1) opacity(0.5);
   transition: filter .3s ease-in-out;
 }
